--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,15 +20,18 @@
                     {% endwith %}
                 </div>
 
-
-                <!-- Avatar - Fixed: Removed invalid href from div -->
                 <div class="mb-4 position-relative">
                     <div class="d-inline-block position-relative">
                         <img
-                                src="{% if user[8] %}{{ url_for('static', filename='profile_pics/' ~ user[8]) }}{% else %}{{ current_user.email | gravatar(size=130) }}{% endif %}"
+                                src="{% if user[8] %}
+                                {{ url_for('static', filename='profile_pics/' ~ user[8]) }}
+                                {% else %}
+                                {{ user[3] | gravatar(size=130) }}
+                                {% endif %}"
                                 alt="{{ user[1] }} {{ user[2] }}"
                                 class="rounded-circle border border-3 border-light shadow"
                                 style="width: 130px; height: 130px; object-fit: cover;">
+
 
                         <span class="position-absolute bottom-0 end-0 bg-success rounded-circle border border-white"
                               style="width: 15px; height: 15px;"></span>
