feat(templates): add auto-dismiss for flash messages after 3 seconds
Add JavaScript to automatically close Bootstrap alert messages after 3 seconds in profile and change password templates to improve user experience

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -137,4 +137,15 @@
 </div>
 
 {% include "footer.html" %}
+<script>
+    // Auto-dismiss flash messages after 3 seconds
+    setTimeout(function () {
+        let alerts = document.querySelectorAll('.alert');
+        alerts.forEach(function(alert) {
+            let alertInstance = bootstrap.Alert.getOrCreateInstance(alert);
+            alertInstance.close();
+        });
+    }, 3000); // 3000 ms = 3 seconds
+</script>
+
 {% endblock %}
