--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -84,4 +84,14 @@
     </div>
 </div>
 {% include 'footer.html' %}
+<script>
+    // Auto-dismiss flash messages after 3 seconds
+    setTimeout(function () {
+        let alerts = document.querySelectorAll('.alert');
+        alerts.forEach(function(alert) {
+            let alertInstance = bootstrap.Alert.getOrCreateInstance(alert);
+            alertInstance.close();
+        });
+    }, 3000); // 3000 ms = 3 seconds
+</script>
 {% endblock %}
